# Crust

./: Cargo.toml  LICENSE  README.md  flake.nix
brain/: Cargo.toml
brain/src/: taint.rs
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs
graph_db/: Cargo.toml
graph_db/src/: lib.rs
interface/: Cargo.toml
interface/src/: dispatcher.rs  lib.rs  synthesis.rs
kernel/: Cargo.toml
kernel/src/: event_log.rs  lib.rs  matchmaker.rs  prober.rs  replay.rs  sandbox.rs
memory/: Cargo.toml
memory/src/: episodic.rs  lib.rs  ontology.rs  semantic.rs
orchestrator/: Cargo.toml
orchestrator/src/: builtin_tools.rs  lib.rs  orga.rs  todo_manager.rs  tool.rs  web_search_tool.rs
scraper/: Cargo.toml
scraper/src/: lib.rs
senses/: Cargo.toml
senses/src/: browser.rs  lib.rs  scrapling.rs
