[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
engine = { path = "../engine" }
env_logger = "0.11.9"
graph_db = { path = "../graph_db" }
hf-hub = { version = "0.5.0", features = ["tokio"] }
log = "0.4.29"
orchestrator = { path = "../orchestrator" }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
scraper = { path = "../scraper" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["full"] }
