[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
brain = { path = "../brain" }
senses = { path = "../senses" }
memory = { path = "../memory" }
orchestrator = { path = "../orchestrator" }
interface = { path = "../interface" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
