[package]
name = "memory"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
petgraph = "0.6.4"
oxigraph = "0.4.5"
sha2 = "0.10.8"
hex = "0.4.3"
