[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
engine = { path = "../engine" }
graph_db = { path = "../graph_db" }
log = "0.4.29"
regex = "1.12.3"
scraper = { path = "../scraper" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
