[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
brain = { path = "../brain" }
kernel = { path = "../kernel" }
log = "0.4.29"
petgraph = "0.6.4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
