[package]
name = "scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chromiumoxide = { version = "0.9.1", features = ["rustls", "zip8"] }
futures-util = "0.3.32"
html5ever = "0.38.0"
kuchiki = "0.8.1"
log = "0.4.29"
reqwest = "0.13.2"
select = "0.6.1"
tokio = { version = "1.50.0", features = ["full"] }
tokio-retry = "0.3.0"
urlencoding = "2.1.3"
